src/test/resources/org/shirolang/interpreter/errors/type_doesnt_exist.sro
node Options[a] begin
    option input a Double(100.2)
end

o Option[b]
